# chico-rs

./: .gitignore  Cargo.toml  LICENSE
api/: Cargo.toml  simple_blog_insert.sql  wrangler.toml
api/migrations/: 0001_initial_schema.sql  0002_seed_data.sql  0003_create_blog_posts.sql  0004_insert_getting_started_blog_post.sql
api/src/: database.rs  lib.rs
api/src/models/: mod.rs
api/src/routes/: mod.rs
api/static/: swagger-ui.html
shared/: Cargo.toml
shared/src/: lib.rs
website/: .gitignore  Cargo.toml  Trunk.toml  index.html  wrangler.toml
website/src/: lib.rs  main.rs
website/src/api/: api_models.rs  client.rs  mock.rs  mod.rs  models.rs
website/src/components/: badge.module.scss  badge.rs  blog_post_renderer.rs  blog_renderer.module.scss  blog_renderer.rs  card.module.scss  card.rs  mod.rs  nav.module.scss  nav.rs
website/src/pages/: about.module.scss  about.rs  advocacy.module.scss  advocacy.rs  blog.module.scss  blog.rs  blog_post.module.scss  blog_post.rs  events.module.scss  events.rs  home.module.scss  home.rs  mod.rs  not_found.rs  opensource.module.scss  opensource.rs  projects.module.scss  projects.rs  workshops.module.scss  workshops.rs
website/src/styles/: _badges.scss  _buttons.scss  _layout.scss  _variables.scss  globals.module.scss  index.scss
