[package]
name = "shared"
version = "0.1.0"
edition = "2021"
authors = ["Yuvinscria Werdxz <werdxz@werdxz.info>"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }

# Optional features for different targets
utoipa = { version = "5.4", optional = true }

[features]
default = []
openapi = ["utoipa"]