[package]
name = "website"
version = "0.1.0"
edition = "2021"
authors = ["Yuvinscria Werdxz <werdxz@werdxz.info>"]

[dependencies]
leptos = { version = "0.8", features = ["csr"] }
leptos_meta = { version = "0.8" }
leptos_router = { version = "0.8" }
console_log = "1"
log = "0.4"
console_error_panic_hook = "0.1"
lucide-leptos = { version = "2.33.0", features = ["all-icons"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
chrono = { version = "0.4", features = ["serde", "wasm-bindgen"] }
stylance = "0.7.1"
markdown = "1.0"
shared = { path = "../shared" }

[dev-dependencies]
stylance-cli = "0.7.1"
wasm-bindgen = "0.2"
wasm-bindgen-test = "0.3"
web-sys = { version = "0.3", features = ["Document", "Window"] }

[package.metadata.stylance]
output_file = "src/styles/bundled.scss"
folders = ["src"]
extensions = [".module.scss", ".module.css"]
hash_len = 7
scss_prelude = """
// Import shared styles - paths relative to the bundled.scss location (src/styles/)
@use "variables" as *;
@use "index";
"""

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"
